--- a/templates/modgenere.html
+++ b/templates/modgenere.html
@@ -54,9 +54,24 @@
 <img src="{{url_for('static', filename='generi/'+genere.immaginegenere)}}"/>
 {%endif%}
 <h2>Classifica libri:</h2>
-<ul>
-    {%for lib in libri%}
-    <li>{{lib.posclas}} {{lib.titolo}} <a href="/libro/{{lib.isbn}}">Visualizza</a></li>
-    {%endfor%}    
-</ul>
+{%for libro in libri%}
+    <div class="listalibro height100">
+        <div class="posizionelista">{{libro.posclas}}</div>
+        <div class="holdcop">
+            {%if libro['immagine'] %}
+            <img class="copertina" src="{{url_for('static', filename='copertine/'+libro['immagine'])}}" class="copertina"/>
+            {%endif%}
+        </div>
+        <div class ="middle">
+            <span class="definizionelista titololista">{{libro.titolo}}</span><br>
+            <span class="definizionelista">{{libro.nomeaut}}</span><br>
+            <span class="definizionelista">{{libro.nomeedit}}</span>
+        </div>
+        <div class ="buttonkeeper">
+            <span class="definizionelista">€{{libro.prezzo}} - {{libro.punti}}</span><br>
+            <a href="/libro/{{libro.isbn}}" class="menubutton right">Visualizza</a>
+            <a href="/insalterbook/{{libro.isbn}}" class="menubutton right">Modifica</a>           
+        </div>
+    </div>
+{%endfor%}
 {% endblock %}
