--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,7 +150,18 @@ label{
     padding: 10 30;
     margin-top: -15;
     margin-bottom: 15;
-    font-size: 20;
+    font-size: 22;
+    font-style: italic;
+}
+
+.info_message{
+    color: #FFF8F0;
+    background-color: rgb(19, 117, 40);
+    font-family: 'Crimson Text', serif;
+    padding: 5 10;
+    /* margin-top: 0; */
+    /* margin-bottom: 0; */
+    font-size: 22;
     font-style: italic;
 }
 
