--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,9 +12,13 @@ body{
 img {
     max-width: 100%;
     max-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
 }
 .main{
-    max-width: 980px;
+    max-width: 990px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -59,7 +63,7 @@ img {
     font-size: 22px;
     margin: 0 5 0 0;
 }
-#menu > :hover, #menu > button:hover, .menubutton:hover {
+#menu > :hover, #menu > button:hover, .menubutton:hover, .searchboxbutton:hover{
     background-color:#0477BF; /* accento */
     cursor:pointer;
     outline: none;
@@ -98,6 +102,7 @@ img {
     text-align: center;
     color: #734F43; /* scuro */
 }
+
 
 .link:visited{
     color:#0477BF; /* accento */
@@ -142,7 +147,46 @@ label{
     font-size: 14px;
     text-align: left;
 }
+.searchbox{
+    padding: 2em;
+    max-width: 600px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: #BF9775; /* terziario */
+    text-align: center;
+    color: #734F43; /* scuro */
+}
+.searchboxinput{
+    width: 80%;
+    margin: 0;
+}
+.searchboxbutton{
+    -webkit-appearance: none;
+    background-color: #A67A53;
+    border: none;
+    color: #FFF8F0;
+    font-family: 'Crimson Text', serif;
+    padding: 11;
+    width: 10%;
+    text-decoration: none;
+    vertical-align: bottom;
+    display: inline-block;
+    margin: 0 0 0 0;
+    font-size: 30px;
+}
 
+.formriga{
+    background: #BF9775; /* terziario */
+    color: #734F43; /* scuro */
+}
+
+.numberinputriga{
+    width: 60px; 
+    margin: 0; 
+    padding: 11 4 5 4;
+    margin-right: 5px;
+}
 .error_message{
     color: #FFF8F0; /* chiaro */
     background-color: rgb(132, 17, 17); /* secondario */
@@ -177,6 +221,34 @@ label{
     margin-right: 10px;
 }
 
+/* Lista genere nel main */
+.generemain{
+    width: 300px;
+    height: 200px;
+    /* opacity: 0.5; */
+    background-position: center;
+    background-size: cover;
+    margin: 15px;
+    vertical-align: middle;
+    background-color: rgba(115, 79, 67); /* scuro */
+    float: left;
+}
+.generemain > a{
+    display: inline-block;
+    text-align: center;
+    width: 300px;
+    line-height: 200px;
+    text-decoration: none;
+    color: #FFF8F0;
+    background-color: rgba(115, 79, 67, 0.5); /* scuro */
+    font-family: 'Crimson Text', serif;
+    font-size: 30px;
+    text-shadow:0px 0px 10px rgba(0, 0, 0, 0.404);
+}
+.generemain > a:hover{
+    background-color:rgba(4, 119, 191, 0.5); /* accento */
+}
+
 
 /* Lista libri */
 .listalibro{
@@ -192,6 +264,7 @@ label{
     height: 100%;
     float: left;
     align-items: stretch;
+    background-color:#734F43; /* scuro */
 }
 .middle{
     float: left;
