--- a/templates/main.html
+++ b/templates/main.html
@@ -15,15 +15,11 @@
 {%else%}
 <h2> Benvenuto su Librochiocciola!</h2>
 {%endif%}
-<form action="/search" class="searchbox" method="GET">
-    <input type="text" name="string" placeholder="Cerca">
-    <button type="submit"><i class="icon ion-md-search"></i></button>
+<form action="/search" class="searchbox" style="width: 600px;"    method="GET" >
+    <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
 </form>
-<ul>
     {%for genere in generi%}
-    
-    <li {%if genere.immaginegenere%} style="background-image: url('{{url_for('static', filename='generi/'+genere.immaginegenere)}}') " {%endif%}><a href="/genere/{{genere.idgenere}}">{{genere.nomegenere}}</a></li>
+    <div class="generemain" {%if genere.immaginegenere%} style="background-image: url('{{url_for('static', filename='generi/'+genere.immaginegenere)}}')"{%endif%}><a href="/genere/{{genere.idgenere}}">{{genere.nomegenere}}</a></div>
     {%endfor%}    
-</ul>
 
 {% endblock %}
