--- a/static/css/style.css
+++ b/static/css/style.css
@@ -249,6 +249,18 @@ label{
     background-color:rgba(4, 119, 191, 0.5); /* accento */
 }
 
+.titologenere{
+    color: #FFF8F0;
+    background-color: rgba(115, 79, 67, 0.5); /* scuro */
+    text-shadow:0px 0px 10px rgba(0, 0, 0, 0.404);
+    margin: 0 0 10 0;
+}
+.backtitologenere{
+    background-position: center;
+    background-size: cover;
+    padding: 150 10 10 50;
+}
+
 
 /* Lista libri */
 .listalibro{
