--- a/static/css/style.css
+++ b/static/css/style.css
@@ -253,12 +253,15 @@ label{
     color: #FFF8F0;
     background-color: rgba(115, 79, 67, 0.5); /* scuro */
     text-shadow:0px 0px 10px rgba(0, 0, 0, 0.404);
-    margin: 0 0 10 0;
+    margin: 0 0 0 0;
+    padding: 100 10 10 50;
+    width: 100%;
+    font-size: 50px;
 }
 .backtitologenere{
     background-position: center;
     background-size: cover;
-    padding: 150 10 10 50;
+    background-color: rgba(115, 79, 67, 1); /* scuro */
 }
 
 
