--- a/templates/main.html
+++ b/templates/main.html
@@ -18,8 +18,10 @@
 <form action="/search" class="searchbox" style="width: 600px;" method="GET" >
     <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
 </form>
+<div class="conenitorefloat">
     {%for genere in generi%}
+    
     <div class="generemain" {%if genere.immaginegenere%} style="background-image: url('{{url_for('static', filename='generi/'+genere.immaginegenere)}}')"{%endif%}><a href="/genere/{{genere.idgenere}}">{{genere.nomegenere}}</a></div>
     {%endfor%}    
-
+</div>
 {% endblock %}
