--- a/templates/listalibri.html
+++ b/templates/listalibri.html
@@ -33,10 +33,14 @@ function aggiungialcarrello(isbn){
 
 {% block menu %}
 {% include '/buttons/goback.html' %}
+{%if session['usertype'] == 2 %}
+{% include '/buttons/dashboard.html' %}
+{%else%}
 {%if session['usertype'] == 1%}
 {% include '/buttons/visprofilo.html' %}
 {%endif%}
 {% include '/buttons/carrello.html' %}
+{%endif%}
 {% include '/buttons/loginout.html' %}
 {% endblock %}
 
