--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,8 +23,10 @@ img {
     margin-right: auto;
     overflow: auto;
 }
-.conenitorefloat{
-
+.contenitorefloat{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
 }
 #topbar {
     background-color:#734F43; /* scuro */
@@ -170,12 +172,14 @@ label{
     border: none;
     color: #FFF8F0;
     font-family: 'Crimson Text', serif;
-    padding: 11;
+    padding: 11 0 11 0;
     width: 10%;
     text-decoration: none;
     vertical-align: bottom;
     display: inline-block;
     margin: 0 0 0 0;
+    min-width: 35;
+    max-width: 53;
     font-size: 30px;
 }
 
@@ -218,7 +222,7 @@ label{
 .definizione{
     color: #734F43; /* scuro */
     font-family: 'Crimson Text', serif;
-    font-size: 20px;
+    font-size: 22px;
     margin-left: 5;
     margin-right: 10px;
 }
@@ -291,7 +295,7 @@ label{
 .definizionelista{
     color: #FFF8F0; /* chiaro */
     font-family: 'Crimson Text', serif;
-    font-size: 20px;
+    font-size: 22px;
     margin-left: 5;
 }
 .titololista{
