--- a/templates/insalterbook.html
+++ b/templates/insalterbook.html
@@ -77,6 +77,7 @@ Inserisci libro
     <input type="number" min="0" name="quant" required   class="formtextinput" value="{{libro['quant']}}">
 
     {%if libro['isbn']%}<input type="hidden" name="oldposclas" value="{{libro['posclas']}}">{%endif%}
-    <input type="submit" value="Salva" class="menubutton"> <input type="reset" value="Reset" class="menubutton"/>
+    <div class="formriga stickbottom autoflow">
+    <input type="reset" value="Reset" class="menubutton right"/><input type="submit" value="Salva" class="menubutton right"> </div>
 </form>
 {% endblock %}
