aggiunta modifica posizione in classifica

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -331,6 +331,7 @@ label{
     float: left;
     margin-right: 10px;
     overflow: hidden;
+    max-width: 600px;
 }
 .definizionelista{
     color: #FFF8F0; /* chiaro */
