--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,6 +9,6 @@
 {% block body %}
 <h2>Dashboard - {{session['username']}} - id({{session['userid']}})</h2>
 <form action="/search" class="searchbox" method="GET" >
-    <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
+    <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca libro"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
 </form>
 {% endblock %}
