Start checkout controller and view, add indirizzi

--- a/templates/carrello.html
+++ b/templates/carrello.html
@@ -58,7 +58,7 @@ function eliminalibrocarr(isbn){
 {%endfor%}
 <div class="rigatotale stickbottom" >
 {%if prodottinondisponibili%}
-<span class="error_message right" style="height: 38px; padding: 4 10;">Alcuni prodotti non sono disponibili nelle quantità richieste</span>
+<span class="error_message right" style="height: 38px; padding: 4 10; margin:0;">Alcuni prodotti non sono disponibili nelle quantità richieste</span>
 {%else%}
 <a href="/checkout"class="menubutton right ">Procedi all'acquisto</a>
 {%endif%}
