--- a/templates/carrello.html
+++ b/templates/carrello.html
@@ -65,6 +65,6 @@ function eliminalibrocarr(isbn){
 <span class="deftotale">Totale: €{{totprezzo|float}} - Totale punti: {{totpunti}}</span>
 </div>
 {%else%}
-<span class="definizionelista titololista">carrello vuoto</span>
+<span class="definizionelista titololista">Carrello vuoto.</span>
 {%endif%}
 {% endblock %}
