--- a/templates/modgenere.html
+++ b/templates/modgenere.html
@@ -60,7 +60,7 @@
 <button onclick="rinomina()"><i class="icon ion-md-cube"></i>Rinomina</button>
 <label for="selettore" class="menubutton"><i class="icon ion-md-cube"></i>Carica foto</label>
 <button onclick="eliminafoto()"><i class="icon ion-md-cube"></i>Elimina foto</button>
-<button onclick="elimina()"><i class="icon ion-md-cube"></i>Elimina genere</button>
+<!-- <button onclick="elimina()"><i class="icon ion-md-cube"></i>Elimina genere</button> -->
 {% endblock %}
 {% block body %}
 <h2>{{genere.nomegenere}}</h2>
