initial implementation of ordine page

--- a/templates/buttons/getordine.html
+++ b/templates/buttons/getordine.html
@@ -2,7 +2,7 @@
     function getordine(){
         var r = prompt("Inserisci il codice dell'ordine",'');
         if (r !=null) {
-            window.location = '/getordine/' + r;
+            window.location = '/ordine/' + r;
         }
     }
 </script>
